# no-pyide

./: README.md  pyproject.toml
src/no-pyide/: main.py
src/no-pyide/templates/: index.html
src/no_pyide/: __main__.py  code.py
src/no_pyide/templates/: index.html  results.html
